; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_namespace.c_bind_remount_one.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_namespace.c_bind_remount_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MS_REMOUNT = common dso_local global i64 0, align 8
@MS_BIND = common dso_local global i64 0, align 8
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i64, i64)* @bind_remount_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bind_remount_one(i8* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* %9, align 8
  %13 = xor i64 %12, -1
  %14 = and i64 %11, %13
  %15 = load i64, i64* @MS_REMOUNT, align 8
  %16 = or i64 %14, %15
  %17 = load i64, i64* @MS_BIND, align 8
  %18 = or i64 %16, %17
  %19 = load i64, i64* %8, align 8
  %20 = or i64 %18, %19
  %21 = call i64 @mount(i32* null, i8* %10, i32* null, i64 %20, i32* null)
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %4
  %24 = load i32, i32* @errno, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %5, align 4
  br label %27

26:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %27

27:                                               ; preds = %26, %23
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i64 @mount(i32*, i8*, i32*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
